# ctrl_toolbox

./: .gitignore  CMakeLists.txt  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml
docs/bootstrapped/: ctrl_toolbox_bs.doxyfile
include/: DigitalPID.h
include/ctrl_toolbox/: ComputeTrajectory.h  DataStructs.h  DigitalPID.h  DigitalSlidingMode.h  ExtendedKalmanFilter.h  HelperFunctions.h  LineOfSight.h  MeasurmentKalmanFilter.h  ModelKalmanFilter.h  VirtualFrame.h  ctrl_toolbox.hpp
include/ctrl_toolbox/kalman_filter/: ExtendedKalmanFilter.h  MeasurementKalmanFilter.h  ModelKalmanFilter.h
include/ctrl_toolbox/sliding_mode/: DigitalSlidingMode.h
include/ctrl_toolbox/virtual_frame/: VirtualFrame.h
src/: ComputeTrajectory.cpp  DigitalPID.cc  ExtendedKalmanFilter.cc  HelperFunctions.cc  LineOfSight.cpp  MeasurmentKalmanFilter.cc  ModelKalmanFilter.cc  VirtualFrame.cc
src/kalman_filter/: ExtendedKalmanFilter.cc  MeasurementKalmanFilter.cc  ModelKalmanFilter.cc
src/pid/: DigitalPID.cc
src/sliding_mode/: DigitalSlidingMode.cc
src/template_class/: DigitalSlidingMode.tpp
src/virtual_frame/: VirtualFrame.cc
test/: ctrl_toolbox_test.cc
